Added more anime pages/categories and fixed some bugs

--- a/Anime_pages/5cm.html
+++ b/Anime_pages/5cm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter x Hunter</title>
+    <title>5 Centimeters Per Second</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,28 +41,18 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/e2c621df60f4deb6693b8db0d391b85c.jpg" alt="5 Centimeters Per Second">
             </div>
             <div>
-                <h1>Hunter X Hunter</h1>
+                <h1>5 Centimeters Per Second</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
-                    dangerous tasks like capturing criminals and bravely searching for lost treasures 
-                    in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
-                    best Hunter possible in hopes of finding his father, who was a Hunter himself and 
-                    had long ago abandoned his young son. However, Gon soon realizes the path to 
-                    achieving his goals is far more challenging than he could have ever imagined. 
-                    Along the way to becoming an official Hunter, Gon befriends the lively 
-                    doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
-                    To attain their own goals and desires, together the four of them take the Hunter 
-                    Exam, notorious for its low success rate and high probability of death. Throughout 
-                    their journey, Gon and his friends embark on an adventure that puts them through
-                    many hardships and struggles. They will meet a plethora of monsters, creatures, 
-                    and characters—all while learning what being a Hunter truly means.
+                    What happens when two people love each other but just aren't meant to be together? Takaki Toono and Akari Shinohara are childhood friends, but circumstances beyond their control tear them apart. They promise to stay in contact, and although the progression of time widens the distance between them, the chain of memories remains ever-present.
+
+                    Byousoku 5 Centimeter is a romantic drama that focuses on the mundane and harsh reality of long-distance relationships. Stuck in the past and unable to make any new memories, Takaki and Akari cling to the hope of seeing each other again. They live their everyday lives half-heartedly, both hurting themselves and the people around them.
                 </p>
             </div>
         </section>
@@ -70,18 +60,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> October 2, 2011 to September 24, 2014<br>
-                    <span>Premiered:</span> Fall 2011<br>
-                    <span>Duration:</span> 23m<br>
+                    <span>Aired:</span> March 3, 2007<br>
+                    <span>Premiered:</span> Spring 2007<br>
+                    <span>Duration:</span> 1h 2m<br>
                     <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 9.0/10<br>
-                    <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
-                    <span>Studio:</span> Madhouse
+                    <span>IMDB Score:</span> 7.4/10<br>
+                    <span>Genre:</span> Drama, Romance, Slice of Life<br>
+                    <span>Studio:</span> CoMix Wave Films
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d6kBeJjTGnY?si=8AcycqwGGPyrEgfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SzAO_NeCmkM?si=lScTQn8_LXN7LSnx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
