--- a/Anime_pages/danger-in-heart.html
+++ b/Anime_pages/danger-in-heart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Hero Academaia</title>
+    <title>Dangers in my Heart</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,16 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.myanimelist.net/images/anime/1959/151055.jpg" alt="MHA">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/4e8ab848c929cecbce30c04ef43d955e.jpg" alt="Dangers in my Heart">
             </div>
             <div>
-                <h1>My Hero Academia: Final Season</h1>
+                <h1>Dangers in my Heart</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    The appearance of "quirks," newly discovered super powers, has been steadily increasing over the years, with 80 percent of humanity possessing various abilities from manipulation of elements to shapeshifting. This leaves the remainder of the world completely powerless, and Izuku Midoriya is one such individual. Since he was a child, the ambitious middle schooler has wanted nothing more than to be a hero. Izuku's unfair fate leaves him admiring heroes and taking notes on them whenever he can. But it seems that his persistence has borne some fruit: Izuku meets the number one hero and his personal idol, All Might. All Might's quirk is a unique ability that can be inherited, and he has chosen Izuku to be his successor! Enduring many months of grueling training, Izuku enrolls in UA High, a prestigious high school famous for its excellent hero training program, and this year's freshmen look especially promising. With his bizarre but talented classmates and the looming threat of a villainous organization, Izuku will soon learn what it really means to be a hero.
+                    Kyoutarou Ichikawa may look like a shy and reserved middle school student, but deep within his heart is a bloodthirsty killer. His ultimate desire is to see his classmate Anna Yamada's beautiful face writhing in pain before he ends her life. But this fantasy may never come to fruition, as Ichikawa starts to see an entirely different side to Yamada. Often seeking refuge in the library, Ichikawa frequently runs into Yamada. It is during these encounters that Ichikawa realizes his model classmate is actually an airhead who can never read the room. As they spend more time together, the boy cannot help but feel not only a sense of endearment toward the very girl he wishes to murder but also a desire to protect her at all costs. Is it possible that this sudden change in Ichikawa's perspective could lead to something more?
                 </p>
             </div>
         </section>
@@ -58,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> October 4, 2025 to Present<br>
-                    <span>Premiered:</span> Fall 2025<br>
-                    <span>Duration:</span> 24m<br>
-                    <span>Status:</span> Currently Airing<br>
-                    <span>IMDB Score:</span> 8.2/10<br>
-                    <span>Genre:</span> Action, School, Drama, Shounen<br>
-                    <span>Studio:</span> Bones
+                    <span>Aired:</span> April 2, 2023 to June 18, 2023<br>
+                    <span>Premiered:</span> Spring 2023<br>
+                    <span>Duration:</span> 22m<br>
+                    <span>Status:</span> On Season Break<br>
+                    <span>IMDB Score:</span> 8.0/10<br>
+                    <span>Genre:</span> Comedy, Romance, School, Shounen<br>
+                    <span>Studio:</span> Wit Studio, MAPPA
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/zz37nGym3OQ?si=sWg_eDIwEyYATQG-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5auzI2L4738?si=zybieHlSMx84qGDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
