--- a/Anime_pages/dressup.html
+++ b/Anime_pages/dressup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachiakuta</title>
+    <title>My Dress-up Darling</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,16 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/acad8581f1a2eafa8c9d68b899bb1b21.jpg" alt="Gachiakuta">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/5567bb1cdafd71b2f2e04e353000517b.jpg" alt="My Dress-Up Darling">
             </div>
             <div>
-                <h1>Gachitakuta</h1>
+                <h1>My Dress-up Darling</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Living in the slums of a wealthy town, Rudo and his foster father Regto try to coexist with the rest of the town's residents, but Rudo despises the wastefulness of the upper class. Ignoring the warnings from those around him, Rudo regularly rummages through the town's garbage in search of anything useful or valuable to save from the "Abyss"—a massive hole where anything considered trash is dumped, including people. Rudo's biological father was one such person, having been thrown into the Abyss after he was accused of murder. One day, after running into a mysterious figure on the way home, Rudo returns to find Regto's dying body on the floor. He is immediately found at the scene by the authorities and is charged with murder. No one believes his claims of innocence, and he is thrown into the Abyss. Instead of dying, however, he finds himself in a strange, foul-smelling place surrounded by monsters made out of trash. When Rudo is attacked by said monsters, he is saved by a man named Enjin, who reveals himself to be a "Cleaner"—someone who uses special weapons called Vital Instruments to combat these creatures. In order to get his revenge on the one who killed Regto, Rudo reluctantly becomes a Cleaner to fight his way back up and out of the Abyss.
+                    Traumatized by a childhood incident with a friend who took exception to his love of traditional dolls, doll-artisan hopeful Wakana Gojou passes his days as a loner, finding solace in the home ec room at his high school. To Wakana, people like beautiful Marin Kitagawa, a trendy girl who's always surrounded by a throng of friends, is practically an alien from another world. But when cheerful Marin—never one to be shy—spots Wakana sewing away one day after school, she barges in with the aim of roping her quiet classmate into her secret hobby: cosplay! Will Wakana's wounded heart be able to handle the invasion from this sexy alien?!
                 </p>
             </div>
         </section>
@@ -58,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> July 6, 2025 to Present<br>
-                    <span>Premiered:</span> Summer 2025<br>
+                    <span>Aired:</span> January 9, 2022 to Present<br>
+                    <span>Premiered:</span> Winter 2022<br>
                     <span>Duration:</span> 24m<br>
-                    <span>Status:</span> Currently Airing<br>
-                    <span>IMDB Score:</span> 8.1/10<br>
-                    <span>Genre:</span> Action, Fantasy, Drama, Shounen<br>
-                    <span>Studio:</span> Bones
+                    <span>Status:</span> On Seasonal Break<br>
+                    <span>IMDB Score:</span> 7.9/10<br>
+                    <span>Genre:</span> Comedy, Ecchi, Slice of Life, Romance<br>
+                    <span>Studio:</span> CloverWorks
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yeRvDchyo44?si=Xqe7021mHtGqq-qR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8oveGY6h6T8?si=LyY-7Vc7uvl9EQ9G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
