--- a/Anime_pages/nozaki.html
+++ b/Anime_pages/nozaki.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachiakuta</title>
+    <title>Monthly Girls' Nozaki-kun</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,16 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/acad8581f1a2eafa8c9d68b899bb1b21.jpg" alt="Gachiakuta">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/09bed74b60b8cc7664dbe09b565d72bb.jpg" alt="Monthly Girls' Nozaki-kun">
             </div>
             <div>
-                <h1>Gachitakuta</h1>
+                <h1>Monthly Girls' Nozaki-kun</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Living in the slums of a wealthy town, Rudo and his foster father Regto try to coexist with the rest of the town's residents, but Rudo despises the wastefulness of the upper class. Ignoring the warnings from those around him, Rudo regularly rummages through the town's garbage in search of anything useful or valuable to save from the "Abyss"—a massive hole where anything considered trash is dumped, including people. Rudo's biological father was one such person, having been thrown into the Abyss after he was accused of murder. One day, after running into a mysterious figure on the way home, Rudo returns to find Regto's dying body on the floor. He is immediately found at the scene by the authorities and is charged with murder. No one believes his claims of innocence, and he is thrown into the Abyss. Instead of dying, however, he finds himself in a strange, foul-smelling place surrounded by monsters made out of trash. When Rudo is attacked by said monsters, he is saved by a man named Enjin, who reveals himself to be a "Cleaner"—someone who uses special weapons called Vital Instruments to combat these creatures. In order to get his revenge on the one who killed Regto, Rudo reluctantly becomes a Cleaner to fight his way back up and out of the Abyss.
+                    Chiyo Sakura is a cheerful high school girl who has fallen head over heels for the oblivious Umetarou Nozaki. Much to Chiyo's confusion, when she confesses to her beloved Nozaki, he hands her an unfamiliar autograph. As it turns out, the stoic teenage boy is actually a respected shoujo mangaka, publishing under the pen name Sakiko Yumeno! A series of misunderstandings leads to Chiyo becoming one of Nozaki's manga assistants. Throughout the hilarious events that ensue, she befriends many of her quirky schoolmates, including her seemingly shameless fellow assistant, Mikoto Mikoshiba, and the "Prince of the School," Yuu Kashima. Gekkan Shoujo Nozaki-kun follows Chiyo as she strives to help Nozaki with his manga and hopes that he will eventually notice her feelings.
                 </p>
             </div>
         </section>
@@ -58,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> July 6, 2025 to Present<br>
-                    <span>Premiered:</span> Summer 2025<br>
+                    <span>Aired:</span> July 7, 2014 to September 22, 2014<br>
+                    <span>Premiered:</span> Summer 2014<br>
                     <span>Duration:</span> 24m<br>
-                    <span>Status:</span> Currently Airing<br>
-                    <span>IMDB Score:</span> 8.1/10<br>
-                    <span>Genre:</span> Action, Fantasy, Drama, Shounen<br>
-                    <span>Studio:</span> Bones
+                    <span>Status:</span> Finished Airing<br>
+                    <span>IMDB Score:</span> 7.5/10<br>
+                    <span>Genre:</span> Comedy, Romance, School<br>
+                    <span>Studio:</span> Doga Kobo
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yeRvDchyo44?si=Xqe7021mHtGqq-qR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AJlS7UGILX8?si=WlgbhK54YtL6NhHJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
