--- a/Anime_pages/prison-school.html
+++ b/Anime_pages/prison-school.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachiakuta</title>
+    <title>Prison School</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,16 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/acad8581f1a2eafa8c9d68b899bb1b21.jpg" alt="Gachiakuta">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/31e74486df1ea17d7a4e0963124e5701.jpg" alt="Prison-School">
             </div>
             <div>
-                <h1>Gachitakuta</h1>
+                <h1>Prison School</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Living in the slums of a wealthy town, Rudo and his foster father Regto try to coexist with the rest of the town's residents, but Rudo despises the wastefulness of the upper class. Ignoring the warnings from those around him, Rudo regularly rummages through the town's garbage in search of anything useful or valuable to save from the "Abyss"—a massive hole where anything considered trash is dumped, including people. Rudo's biological father was one such person, having been thrown into the Abyss after he was accused of murder. One day, after running into a mysterious figure on the way home, Rudo returns to find Regto's dying body on the floor. He is immediately found at the scene by the authorities and is charged with murder. No one believes his claims of innocence, and he is thrown into the Abyss. Instead of dying, however, he finds himself in a strange, foul-smelling place surrounded by monsters made out of trash. When Rudo is attacked by said monsters, he is saved by a man named Enjin, who reveals himself to be a "Cleaner"—someone who uses special weapons called Vital Instruments to combat these creatures. In order to get his revenge on the one who killed Regto, Rudo reluctantly becomes a Cleaner to fight his way back up and out of the Abyss.
+                    Located on the outskirts of Tokyo, Hachimitsu Private Academy is a prestigious all-girls boarding school, famous for its high-quality education and disciplined students. However, this is all about to change due to the revision of the school's most iconic policy, as boys are now able to enroll as well. At the start of the first semester under this new decree, a mere five boys have been accepted, effectively splitting the student body into a ratio of two hundred girls to one boy. Kiyoshi, Gakuto, Shingo, Andre, and Jo are quickly cast away without having a chance to make any kind of a first impression. Unable to communicate with their fellow female students, the eager boys set their sights on a far more dangerous task: peeping into the girls' bath! It's only after their plan is thoroughly decimated by the infamous Underground Student Council that the motley crew find their freedom abruptly taken from them, as they are thrown into the school's prison with the sentence of an entire month as punishment. Thus begins the tale of the boys' harsh lives in Prison School, a righteous struggle that will ultimately test the bonds of friendship and perverted brotherhood. 
                 </p>
             </div>
         </section>
@@ -58,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> July 6, 2025 to Present<br>
-                    <span>Premiered:</span> Summer 2025<br>
+                    <span>Aired:</span> July 11, 2015 to September 26, 2015<br>
+                    <span>Premiered:</span> Summer 2015<br>
                     <span>Duration:</span> 24m<br>
-                    <span>Status:</span> Currently Airing<br>
-                    <span>IMDB Score:</span> 8.1/10<br>
-                    <span>Genre:</span> Action, Fantasy, Drama, Shounen<br>
-                    <span>Studio:</span> Bones
+                    <span>Status:</span> Finished Airing<br>
+                    <span>IMDB Score:</span> 7.5/10<br>
+                    <span>Genre:</span> Comedy, Ecchi, Romance, School, Seinen<br>
+                    <span>Studio:</span> J.C. Staff
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yeRvDchyo44?si=Xqe7021mHtGqq-qR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kyLR40ncv1k?si=Cm39YpzjfMAdbA00" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
