--- a/Anime_pages/tybw.html
+++ b/Anime_pages/tybw.html
@@ -58,10 +58,10 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> Oct 10, 2022 to Present<br>
+                    <span>Aired:</span> October 10, 2022 to Present<br>
                     <span>Premiered:</span> Fall 2022<br>
                     <span>Duration:</span> 23m<br>
-                    <span>Status:</span> On Break<br>
+                    <span>Status:</span> On Seasonal Break<br>
                     <span>IMDB Score:</span> 9.0/10<br>
                     <span>Genre:</span> Action, Adventure, Comedy, Drama, Shounen<br>
                     <span>Studio:</span> Studio Pierrot
