--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                 </a>
             </div>
         </section>
+
+
         <section class="topic">
             <h2>Top Airing</h2>
             <div class="container">
@@ -135,6 +137,156 @@
                         <img src="https://cdn.myanimelist.net/images/anime/1697/151793.jpg" alt="SpyxFamily">
                         <h3>Spy x Family Season: 3</h3>
                         <p>A spy on an undercover mission gets married and adopts a child as part of his cover. His wife and daughter have secrets of their own, and all three must strive to keep together.</p>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+
+        <section class="topic">
+            <h2>If You Like Romance</h2>
+            <div class="container">
+                <a href="Anime_pages/your-name.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/16eec56baf8f3fcc6430607f58ce3d12.jpg" alt="Your-Name">
+                        <h3>Your Name</h3>
+                        <p>Two teenagers share a profound, magical connection upon discovering they are swapping bodies. Things manage to become even more complicated when the boy and girl decide to meet in person.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/blue-box.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/b8169841c47c010d664f293fcec036fb.jpg" alt="Blue-Box">
+                        <h3>Blue Box</h3>
+                        <p>Third-year student Taiki joins badminton club. Despite being an early riser, star player Chinatsu, his crush, arrives first. Living together unexpectedly, Taiki strives to reach Nationals to impress Chinatsu.</p>
+                        <!-- <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/04e65044c0d9637367efe0cddf7dd205.jpg" alt="Clannad">
+                        <h3>Clannad: After Story</h3>
+                        <p>The emotionally devastating and heartwarming continuation of the lives of Tomoya and Nagisa as they navigate the complexities of adulthood and family.</p>
+                    </div> -->
+                    </div> 
+                </a>
+                <a href="Anime_pages/fruit-basket.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/ef8bb193718c36782dd4ee5f402981e0.jpg" alt="Fruit Basket">
+                        <h3>Fruit Basket</h3>
+                        <p>Follows Tohru Honda as she integrates into the cursed Sohma family. While having comedic moments, its core is a journey of healing, emotional trauma, and profound, transformative love.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/danger-in-heart.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/4e8ab848c929cecbce30c04ef43d955e.jpg" alt="Dangers in my Heart">
+                        <h3>Dangers in my Heart</h3>
+                        <p>Fascinated by the macabre, Kyotaro fantasizes about acting on his twisted thoughts to the detriment of his classmates. His heart was dark until an encounter with Anna lit a spark within it in a classic tale of boy meets girl.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/5cm.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/e2c621df60f4deb6693b8db0d391b85c.jpg" alt="5 Centimeters Per Second">
+                        <h3>5 Centimeters Per Second</h3>
+                        <p>Told in three interconnected segments, Takaki tells the story of his life as cruel winters, cold technology, and finally, adult obligations and responsibility converge to test the delicate petals of love.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/evergarden.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/223fc01a72fcc2ac45ff4fce4072087d.jpg" alt="Violet Evergarden">
+                        <h3>Violet Evergarden</h3>
+                        <p>In the aftermath of a great war, Violet Evergarden, a young female ex-soldier, gets a job at a writers' agency and goes on assignments to create letters that can connect people.</p>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+
+        <section class="topic">
+            <h2>Rom-Com</h2>
+            <div class="container">
+                <a href="Anime_pages/love-is-war.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/f4f7470c7b0fedc1df5ec703c2d7fbc0.jpg" alt="Love is war">
+                        <h3>Kaguya-sama: Love Is War</h3>
+                        <p>A psychological romantic comedy where two student council geniuses are too proud to confess, leading to hilarious, elaborate battles to trick the other into admitting their feelings first.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/horimiya.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/84f307c05bb3d0ef62477e44196e69eb.jpg" alt="Horimiya">
+                        <h3>Horimiya</h3>
+                        <p>Known for its feel-good, authentic dynamic, it follows a popular girl and a quiet boy who discover each other's hidden sides outside of school, leading to a charmingly quick and realistic relationship.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/dressup.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/5567bb1cdafd71b2f2e04e353000517b.jpg" alt="My Dress-Up Darling">
+                        <h3>My Dress-Up Darling</h3>
+                        <p>A wholesome series about a quiet male doll-maker and a popular female gyaru who bond over their shared passion for cosplay, leading to lots of cute and funny slice-of-life interactions.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/quintuplets.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/a411d580dc7bb5e495de18fe4c53341e.jpg" alt="Quintessential Quintuplets">
+                        <h3>The Quintessential Quintuplets</h3>
+                        <p>With his family deep in debt, Futaro Uesugi accepts a lucrative job tutoring underachieving quintuplet classmates to help them graduate high school.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/nozaki.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/09bed74b60b8cc7664dbe09b565d72bb.jpg" alt="Monthly Girls' Nozaki-kun">
+                        <h3>Monthly Girls' Nozaki-kun</h3>
+                        <p>Chiyo Sakura confesses her feelings to her schoolmate Nozaki. Due to a misunderstanding, Nozaki thinks Chiyo is just a fan. She then discovers Nozaki's other identity; a shojo manga artist.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/snafu.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/b231331d677a47b4f12b9dafd2e66568.jpg" alt="My Teen Romantic Comedy">
+                        <h3>My Teen Romantic Comedy SNAFU</h3>
+                        <p>About an antisocial high school student named Hikigaya Hachiman with a distorted view on life and no friends or girlfriend. His life change when he was forced to enter the "Volunteer Service Club" by his teacher.</p>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+        <section class="topic">
+            <h2>Comedy</h2>
+            <div class="container">
+                <a href="Anime_pages/gintama.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/557c4c18257fd706c7ab480ce75fdd6f.jpg" alt="Gintama">
+                        <h3>Gintama</h3>
+                        <p>Set in an alternate Edo period where aliens have invaded, this series follows Gintoki Sakata and his friends as they take on odd jobs. It's famous for its crude humor, self-referential jokes, and incredible action arcs.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/konosuba.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/c534bc3db886ec705a2e17fe8e8d0069.jpg" alt="Konosuba">
+                        <h3>Konosuba: God's Blessing on This Wonderful World!</h3>
+                        <p>It was a happy day for Kazuma - right up to the moment he died. A goddess intervenes and offers him a second chance in a magical land.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/highschool-boys.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/a1c39ee3be86973c25767f2e8bff5ac9.jpg" alt="Daily Lives of High School Boys">
+                        <h3>Daily Lives of High School Boys</h3>
+                        <p>Exactly what the title says—a series of sketch comedies revolving around three high school boys and their absurd, often awkward, attempts to pass the time.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/prison-school.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/31e74486df1ea17d7a4e0963124e5701.jpg" alt="Prison-School">
+                        <h3>Prison School</h3>
+                        <p>Hachimitsu Academy, once an all-girls school, has become co-ed, and teen Kiyoshi is one of five boys to enroll. When he is caught peeping, Kiyoshi is sent to the schools prison, where his punishment is carried out.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/grand-blue.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/8a5f647c5a8930f3ed95a7f4ae1831b4.jpg" alt="Grand-Blue">
+                        <h3>Grand Blue Dreaming</h3>
+                        <p>A college student moves to a seaside town and gets pulled into the wild, alcohol-fueled antics of his uncle's diving club.</p>
+                    </div>
+                </a>
+                <a href="Anime_pages/opm.html">
+                    <div>
+                        <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/f5d173f8317f592c6c70d594829b89e4.jpg" alt="OPM">
+                        <h3>One Punch Man</h3>
+                        <p>The story of Saitama, a hero who can defeat any opponent with a single punch but is bored by the lack of challenge. It expertly parodies superhero tropes with hilarious results.</p>
                     </div>
                 </a>
             </div>
