--- a/Anime_pages/blue-box.html
+++ b/Anime_pages/blue-box.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter x Hunter</title>
+    <title>Blue Box</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,28 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/b8169841c47c010d664f293fcec036fb.jpg" alt="Blue-Box">
             </div>
             <div>
-                <h1>Hunter X Hunter</h1>
+                <h1>Blue Box</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
-                    dangerous tasks like capturing criminals and bravely searching for lost treasures 
-                    in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
-                    best Hunter possible in hopes of finding his father, who was a Hunter himself and 
-                    had long ago abandoned his young son. However, Gon soon realizes the path to 
-                    achieving his goals is far more challenging than he could have ever imagined. 
-                    Along the way to becoming an official Hunter, Gon befriends the lively 
-                    doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
-                    To attain their own goals and desires, together the four of them take the Hunter 
-                    Exam, notorious for its low success rate and high probability of death. Throughout 
-                    their journey, Gon and his friends embark on an adventure that puts them through
-                    many hardships and struggles. They will meet a plethora of monsters, creatures, 
-                    and characters—all while learning what being a Hunter truly means.
+                    Every morning, incoming first-year Taiki Inomata hurries to his high school gym in order to further refine his badminton skills. However, his true motivation stems from sharing the otherwise empty gym with second-year Chinatsu Kano, Taiki's crush and the star player of the girls' basketball team. Although Chinatsu seems unapproachable, Taiki gradually finds opportunities to get to know her little by little. Unbeknownst to Taiki, his tireless work ethic and admiration motivate Chinatsu to work harder and strive to achieve her greatest ambitions. When her family must suddenly move overseas for work, Chinatsu decides to remain in Japan and shoot for victory at the national level. With nowhere to stay, she is taken in by Taiki's mother, who is longtime friends with Chinatsu's own. Overwhelmed with the new reality of living alongside the girl he loves, Taiki resolves to join Chinatsu at the national level in his own sport—and grow closer to her in the process. Still, despite being good enough to catch his coach's eye, Taiki must fight an uphill battle to qualify for a spot on the starting team. Cheered on by both Chinatsu and gymnast Hina Chouno, his childhood friend, Taiki aims to make a name for himself among his powerful upperclassmen.
                 </p>
             </div>
         </section>
@@ -70,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> October 2, 2011 to September 24, 2014<br>
-                    <span>Premiered:</span> Fall 2011<br>
+                    <span>Aired:</span> October 3, 2024 to Present<br>
+                    <span>Premiered:</span> Fall 2024<br>
                     <span>Duration:</span> 23m<br>
-                    <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 9.0/10<br>
-                    <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
-                    <span>Studio:</span> Madhouse
+                    <span>Status:</span> On Seasonal Break<br>
+                    <span>IMDB Score:</span> 7.9/10<br>
+                    <span>Genre:</span> Romance, School, Sports, Shounen<br>
+                    <span>Studio:</span> Telecom Animation Film
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d6kBeJjTGnY?si=8AcycqwGGPyrEgfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tcK9Eghsfq8?si=Y1TdJdFFxOb7Wb3S" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
