--- a/Anime_pages/gintama.html
+++ b/Anime_pages/gintama.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachiakuta</title>
+    <title>Gintama</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,16 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/acad8581f1a2eafa8c9d68b899bb1b21.jpg" alt="Gachiakuta">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/557c4c18257fd706c7ab480ce75fdd6f.jpg" alt="Gintama">
             </div>
             <div>
-                <h1>Gachitakuta</h1>
+                <h1>Gintama</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Living in the slums of a wealthy town, Rudo and his foster father Regto try to coexist with the rest of the town's residents, but Rudo despises the wastefulness of the upper class. Ignoring the warnings from those around him, Rudo regularly rummages through the town's garbage in search of anything useful or valuable to save from the "Abyss"—a massive hole where anything considered trash is dumped, including people. Rudo's biological father was one such person, having been thrown into the Abyss after he was accused of murder. One day, after running into a mysterious figure on the way home, Rudo returns to find Regto's dying body on the floor. He is immediately found at the scene by the authorities and is charged with murder. No one believes his claims of innocence, and he is thrown into the Abyss. Instead of dying, however, he finds himself in a strange, foul-smelling place surrounded by monsters made out of trash. When Rudo is attacked by said monsters, he is saved by a man named Enjin, who reveals himself to be a "Cleaner"—someone who uses special weapons called Vital Instruments to combat these creatures. In order to get his revenge on the one who killed Regto, Rudo reluctantly becomes a Cleaner to fight his way back up and out of the Abyss.
+                    The Amanto, aliens from outer space, have invaded Earth and taken over feudal Japan. As a result, a prohibition on swords has been established, and the samurai of Japan are treated with disregard as a consequence. However one man, Gintoki Sakata, still possesses the heart of the samurai, although from his love of sweets and work as a yorozuya, one might not expect it. Accompanying him in his jack-of-all-trades line of work are Shinpachi Shimura, a boy with glasses and a strong heart, Kagura with her umbrella and seemingly bottomless stomach, as well as Sadaharu, their oversized pet dog. Of course, these odd jobs are not always simple, as they frequently have run-ins with the police, ragtag rebels, and assassins, oftentimes leading to humorous but unfortunate consequences. Who said life as an errand boy was easy?
                 </p>
             </div>
         </section>
@@ -58,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> July 6, 2025 to Present<br>
-                    <span>Premiered:</span> Summer 2025<br>
+                    <span>Aired:</span> April 4, 2006 to January 8, 2021<br>
+                    <span>Premiered:</span> Spring 2006<br>
                     <span>Duration:</span> 24m<br>
-                    <span>Status:</span> Currently Airing<br>
-                    <span>IMDB Score:</span> 8.1/10<br>
-                    <span>Genre:</span> Action, Fantasy, Drama, Shounen<br>
-                    <span>Studio:</span> Bones
+                    <span>Status:</span> Finished Airing<br>
+                    <span>IMDB Score:</span> 8.7/10<br>
+                    <span>Genre:</span> Action, Comedy, Historical Sci-Fi, Parody, Samurai, Shounen<br>
+                    <span>Studio:</span> Sunrise
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yeRvDchyo44?si=Xqe7021mHtGqq-qR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YQC3ot0IjiA?si=AnDgahhI_qgvsmC9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
