--- a/Anime_pages/horimiya.html
+++ b/Anime_pages/horimiya.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter x Hunter</title>
+    <title>Horimiya</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,28 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/84f307c05bb3d0ef62477e44196e69eb.jpg" alt="Horimiya">
             </div>
             <div>
-                <h1>Hunter X Hunter</h1>
+                <h1>Horimiya</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
-                    dangerous tasks like capturing criminals and bravely searching for lost treasures 
-                    in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
-                    best Hunter possible in hopes of finding his father, who was a Hunter himself and 
-                    had long ago abandoned his young son. However, Gon soon realizes the path to 
-                    achieving his goals is far more challenging than he could have ever imagined. 
-                    Along the way to becoming an official Hunter, Gon befriends the lively 
-                    doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
-                    To attain their own goals and desires, together the four of them take the Hunter 
-                    Exam, notorious for its low success rate and high probability of death. Throughout 
-                    their journey, Gon and his friends embark on an adventure that puts them through
-                    many hardships and struggles. They will meet a plethora of monsters, creatures, 
-                    and characters—all while learning what being a Hunter truly means.
+                    On the surface, the thought of Kyouko Hori and Izumi Miyamura getting along would be the last thing in people's minds. After all, Hori has a perfect combination of beauty and brains, while Miyamura appears meek and distant to his fellow classmates. However, a fateful meeting between the two lays both of their hidden selves bare. Even though she is popular at school, Hori has little time to socialize with her friends due to housework. On the other hand, Miyamura lives under the noses of his peers, his body bearing secret tattoos and piercings that make him look like a gentle delinquent. Having opposite personalities yet sharing odd similarities, the two quickly become friends and often spend time together in Hori's home. As they both emerge from their shells, they share with each other a side of themselves concealed from the outside world.
                 </p>
             </div>
         </section>
@@ -70,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> October 2, 2011 to September 24, 2014<br>
-                    <span>Premiered:</span> Fall 2011<br>
+                    <span>Aired:</span> January 10, 2021 to September 23, 2023<br>
+                    <span>Premiered:</span> Winter 2021<br>
                     <span>Duration:</span> 23m<br>
                     <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 9.0/10<br>
-                    <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
-                    <span>Studio:</span> Madhouse
+                    <span>IMDB Score:</span> 8/10<br>
+                    <span>Genre:</span> Comedy, Romance, School, Slice of Life, Shounen<br> 
+                    <span>Studio:</span> CloverWorks
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d6kBeJjTGnY?si=8AcycqwGGPyrEgfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/e4RCugyx5No?si=j87_nDYzVjGd_Za6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
