--- a/Anime_pages/konosuba.html
+++ b/Anime_pages/konosuba.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter x Hunter</title>
+    <title>KonoSuba: God's Blessing on This Wonderful World!</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,28 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/c534bc3db886ec705a2e17fe8e8d0069.jpg" alt="Konosuba">
             </div>
             <div>
-                <h1>Hunter X Hunter</h1>
+                <h1>KonoSuba: God's Blessing on This Wonderful World!</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
-                    dangerous tasks like capturing criminals and bravely searching for lost treasures 
-                    in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
-                    best Hunter possible in hopes of finding his father, who was a Hunter himself and 
-                    had long ago abandoned his young son. However, Gon soon realizes the path to 
-                    achieving his goals is far more challenging than he could have ever imagined. 
-                    Along the way to becoming an official Hunter, Gon befriends the lively 
-                    doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
-                    To attain their own goals and desires, together the four of them take the Hunter 
-                    Exam, notorious for its low success rate and high probability of death. Throughout 
-                    their journey, Gon and his friends embark on an adventure that puts them through
-                    many hardships and struggles. They will meet a plethora of monsters, creatures, 
-                    and characters—all while learning what being a Hunter truly means.
+                    After dying a laughable and pathetic death on his way back from buying a game, high school student and recluse Kazuma Satou finds himself sitting before a beautiful but obnoxious goddess named Aqua. She provides the NEET with two options: continue on to heaven or reincarnate in every gamer's dream—a real fantasy world! Choosing to start a new life, Kazuma is quickly tasked with defeating a Demon King who is terrorizing villages. But before he goes, he can choose one item of any kind to aid him in his quest, and the future hero selects Aqua. But Kazuma has made a grave mistake—Aqua is completely useless! Unfortunately, their troubles don't end here; it turns out that living in such a world is far different from how it plays out in a game. Instead of going on a thrilling adventure, the duo must first work to pay for their living expenses. Indeed, their misfortunes have only just begun!
                 </p>
             </div>
         </section>
@@ -70,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> October 2, 2011 to September 24, 2014<br>
-                    <span>Premiered:</span> Fall 2011<br>
+                    <span>Aired:</span> January 14, 2016 to Present<br>
+                    <span>Premiered:</span> Winter 2016<br>
                     <span>Duration:</span> 23m<br>
-                    <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 9.0/10<br>
-                    <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
-                    <span>Studio:</span> Madhouse
+                    <span>Status:</span> On Seasonal Break<br>
+                    <span>IMDB Score:</span> 7.8/10<br>
+                    <span>Genre:</span> Adventure, Comedy, Fantasy, Magic, Parody, Supernatural, Isekai<br>
+                    <span>Studio:</span> Studio Deen
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d6kBeJjTGnY?si=8AcycqwGGPyrEgfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/h4dX58X6ln4?si=lXW8HF1tFBLuCz0z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
