--- a/Anime_pages/love-is-war.html
+++ b/Anime_pages/love-is-war.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter x Hunter</title>
+    <title>Kaguya Sama: Love is War</title>
     <link rel="stylesheet" href="../Anime-Head.css">
     <link rel="stylesheet" href="anime-page.css">
 </head>
@@ -41,28 +41,16 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main>    
         <section>
             <div>
-                <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
+                <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/f4f7470c7b0fedc1df5ec703c2d7fbc0.jpg" alt="Love is war">
             </div>
             <div>
-                <h1>Hunter X Hunter</h1>
+                <h1>Kaguya Sama: Love is War</h1>
                 <h3>Synopsis:</h3>
                 <p>
-                    Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
-                    dangerous tasks like capturing criminals and bravely searching for lost treasures 
-                    in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
-                    best Hunter possible in hopes of finding his father, who was a Hunter himself and 
-                    had long ago abandoned his young son. However, Gon soon realizes the path to 
-                    achieving his goals is far more challenging than he could have ever imagined. 
-                    Along the way to becoming an official Hunter, Gon befriends the lively 
-                    doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
-                    To attain their own goals and desires, together the four of them take the Hunter 
-                    Exam, notorious for its low success rate and high probability of death. Throughout 
-                    their journey, Gon and his friends embark on an adventure that puts them through
-                    many hardships and struggles. They will meet a plethora of monsters, creatures, 
-                    and characters—all while learning what being a Hunter truly means.
+                    At the renowned Shuchiin Academy, Miyuki Shirogane and Kaguya Shinomiya are the student body's top representatives. Ranked the top student in the nation and respected by peers and mentors alike, Miyuki serves as the student council president. Alongside him, the vice president Kaguya—eldest daughter of the wealthy Shinomiya family—excels in every field imaginable. They are the envy of the entire student body, regarded as the perfect couple. However, despite both having already developed feelings for the other, neither are willing to admit them. The first to confess loses, will be looked down upon, and will be considered the lesser. With their honor and pride at stake, Miyuki and Kaguya are both equally determined to be the one to emerge victorious on the battlefield of love!
                 </p>
             </div>
         </section>
@@ -70,18 +58,18 @@
             <div>
                 <h2>Details:</h2>
                 <p>
-                    <span>Aired:</span> October 2, 2011 to September 24, 2014<br>
-                    <span>Premiered:</span> Fall 2011<br>
-                    <span>Duration:</span> 23m<br>
+                    <span>Aired:</span> January 12, 2019 to December 17, 2023<br>
+                    <span>Premiered:</span> Winter 2019<br>
+                    <span>Duration:</span> 25m<br>
                     <span>Status:</span> Finished Airing<br>
-                    <span>IMDB Score:</span> 9.0/10<br>
-                    <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
-                    <span>Studio:</span> Madhouse
+                    <span>IMDB Score:</span> 8.5/10<br>
+                    <span>Genre:</span> Comedy, Romance, School, Psychological, Seinen<br>
+                    <span>Studio:</span> A-1 Pictures
                 </p>
             </div>
             <div class="trailer-heading">
                 <h2>Watch Trailer</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d6kBeJjTGnY?si=8AcycqwGGPyrEgfQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rZ95aZmQu_8?si=jHREiv7WAG_MVygg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
